--- a/src/styles/marketplaceDefaults.css
+++ b/src/styles/marketplaceDefaults.css
@@ -17,7 +17,8 @@
 :root {
   /* ================ Colors ================ */
 
-  --marketplaceColor: #0095b3;
+  /* --marketplaceColor: #0095b3; */
+  --marketplaceColor: #4b0707;
   --marketplaceColorLight: #00bfe6;
   --marketplaceColorDark: #006a80;
 
